# Soprano-Vibes

./: .gitignore  README.md  app.py  pyproject.toml
.cursor/rules/: always-add-tests.mdc  code-style.mdc  dependency-management.mdc  error-handling.mdc  security.mdc
sopranos/: __init__.py
sopranos/api/: __init__.py  characters.py
sopranos/models/: character.py
sopranos/utils/: errors.py  security.py
tests/: conftest.py
tests/api/: test_characters.py
tests/models/: test_character.py
tests/utils/: test_errors.py  test_security.py
