[tool.poetry]
name = "sopranos"
version = "0.1.0"
description = "A Flask web application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "sopranos"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
werkzeug = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 