[tool.poetry]
name = "sopranos"
version = "0.1.0"
description = "A Flask web application"
authors = ["Carl Hillermann"]
readme = "README.md"
packages = [{include = "sopranos"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
werkzeug = "^3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=sopranos --cov-report=term-missing" 
